# word-generator

./: CHANGELOG.md  CityGeneration.hs  Generator.hs  Main  Main.hs  README.md  communes.txt.dist  distribution.txt  prenoms.txt  word-generator.cabal
lib/: CityGeneration.hs  Distribution.hs  Generator.hs
resources/: communes.txt  prenoms.txt.dist
tests/: DistributionSpec.hs  FooSpec.hs
