cabal-version:      2.4
name:               word-generator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maxime BUS
maintainer:         bus.maxime@mailoo.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

test-suite tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     tests
  build-depends:
    , base            ^>=4.14.3.0
    , hspec           ^>=2.9.7
    , word-generator

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ^>=2.9.7

library
  hs-source-dirs:   lib
  exposed-modules:
    Distribution
    Generator

  build-depends:
    , base        ^>=4.14.3.0
    , containers  ^>=0.6.5.1
    , random      ^>=1.2.1

  default-language: Haskell2010

executable word-generator
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base            ^>=4.14.3.0
    , word-generator

  hs-source-dirs:   bin
  default-language: Haskell2010
